INSTRUCCIONES/UPDATE/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABS
    ACOS
    ACOSD
    ACOSH
    ADD
    ALL
    ALTER
    AND
    ANY
    AS
    ASC
    ASIN
    ASIND
    ASINH
    ATAN
    ATAN2
    ATAN2D
    ATAND
    ATANH
    AVG
    BETWEEN
    BIGINT
    BY
    CASE
    CBRT
    CEIL
    CEILING
    CEJILLA
    CHAR
    CHARACTER
    CHECK
    COLUMN
    CONSTRAINT
    CONVERT
    COS
    COSD
    COSH
    COT
    COTD
    COUNT
    CREATE
    CURRENT_DATE
    CURRENT_TIME
    CURRENT_USER
    DATABASE
    DATE
    DATE_PART
    DAY
    DECIMAL
    DECODE
    DEGREES
    DELETE
    DESC
    DISTINCT
    DIV
    DOUBLE
    DROP
    D_OR
    ELSE
    ENCODE
    END
    ENUM
    EXCEPT
    EXISTS
    EXP
    EXTRACT
    FACTORIAL
    FALSE
    FLOAT
    FLOOR
    FOREIGN
    FOREING
    FROM
    FULL
    GCD
    GET_BYTE
    GROUP
    HASHTAG
    HAVING
    HOUR
    IN
    INHERITS
    INNER
    INTEGER
    INTERSECT
    INTERVAL
    IS
    ISNULL
    JOIN
    KEY
    LCM
    LEFT
    LENGTH
    LIKE
    LIMIT
    LN
    LOG
    LOG10
    MAX
    MAYMAY
    MD5
    MENMEN
    MIN
    MINUTE
    MIN_SCALE
    MOD
    MODULO
    MONEY
    MONTH
    MULTI
    NATURAL
    NOT
    NOTNULL
    NOW
    NULL
    NUMERIC
    OFFSET
    ON
    ONLY
    OR
    ORDER
    OUTER
    OWNER
    PI
    POWER
    PRECISION
    PRIMARY
    RADIANS
    RANDOM
    REAL
    REFERENCES
    RENAME
    RETURNING
    RIGHT
    ROUND
    SCALE
    SECOND
    SELECT
    SESSION_USER
    SETSEED
    SET_BYTE
    SHA256
    SIGN
    SIN
    SIND
    SINH
    SMALLINT
    SOME
    SQRT
    SUBSTR
    SUBSTRING
    SUM
    SYMMETRIC
    S_OR
    TABLE
    TAN
    TAND
    TANH
    TEXT
    THEN
    TIME
    TIMESTAMP
    TO
    TRIM
    TRIM_SCALE
    TRUC
    TRUE
    TYPE
    UNION
    UNIQUE
    UNKNOWN
    USE
    USING
    VARCHAR
    VARYING
    WHEN
    WIDTH_BUCKET
    Y
    YEAR

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> insert_insrt
Rule 5     instruccion -> update_insrt
Rule 6     insert_insrt -> INSERT INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
Rule 7     insert_insrt -> INSERT INTO ID PAR_A PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
Rule 8     insert_insrt -> INSERT INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA
Rule 9     lista_parametros_lista -> lista_parametros_lista COMA ID
Rule 10    lista_parametros_lista -> ID
Rule 11    lista_datos -> lista_datos COMA expresion
Rule 12    lista_datos -> expresion
Rule 13    agrupacion_expresion -> PAR_A expresion PAR_C
Rule 14    expresion -> CADENA
Rule 15    expresion -> ENTERO
Rule 16    expresion -> FLOTANTE
Rule 17    expresion -> ID
Rule 18    expresion -> ID PUNTO ID
Rule 19    expresion -> expresion SUMA expresion
Rule 20    expresion -> expresion RESTA expresion
Rule 21    expresion -> expresion DIVISION expresion
Rule 22    expresion -> expresion ASTERISCO expresion
Rule 23    expresion_relacional -> expresion MAYQUE expresion
Rule 24    expresion_relacional -> expresion MENQUE expresion
Rule 25    expresion_relacional -> expresion MAYIGQUE expresion
Rule 26    expresion_relacional -> expresion MENIGQUE expresion
Rule 27    expresion_relacional -> expresion DOBLEIG expresion
Rule 28    expresion_relacional -> expresion IGUAL expresion
Rule 29    expresion_relacional -> expresion NOIG expresion
Rule 30    expresion_relacional -> expresion NOIGUAL expresion
Rule 31    update_insrt -> UPDATE ID SET lista_update WHERE expresion_relacional PTCOMA
Rule 32    lista_update -> lista_update COMA parametro_update
Rule 33    lista_update -> parametro_update
Rule 34    parametro_update -> ID IGUAL expresion

Terminals, with rules where they appear

ABS                  : 
ACOS                 : 
ACOSD                : 
ACOSH                : 
ADD                  : 
ALL                  : 
ALTER                : 
AND                  : 
ANY                  : 
AS                   : 
ASC                  : 
ASIN                 : 
ASIND                : 
ASINH                : 
ASTERISCO            : 22
ATAN                 : 
ATAN2                : 
ATAN2D               : 
ATAND                : 
ATANH                : 
AVG                  : 
BETWEEN              : 
BIGINT               : 
BY                   : 
CADENA               : 14
CASE                 : 
CBRT                 : 
CEIL                 : 
CEILING              : 
CEJILLA              : 
CHAR                 : 
CHARACTER            : 
CHECK                : 
COLUMN               : 
COMA                 : 9 11 32
CONSTRAINT           : 
CONVERT              : 
COS                  : 
COSD                 : 
COSH                 : 
COT                  : 
COTD                 : 
COUNT                : 
CREATE               : 
CURRENT_DATE         : 
CURRENT_TIME         : 
CURRENT_USER         : 
DATABASE             : 
DATE                 : 
DATE_PART            : 
DAY                  : 
DECIMAL              : 
DECODE               : 
DEGREES              : 
DELETE               : 
DESC                 : 
DISTINCT             : 
DIV                  : 
DIVISION             : 21
DOBLEIG              : 27
DOUBLE               : 
DROP                 : 
D_OR                 : 
ELSE                 : 
ENCODE               : 
END                  : 
ENTERO               : 15
ENUM                 : 
EXCEPT               : 
EXISTS               : 
EXP                  : 
EXTRACT              : 
FACTORIAL            : 
FALSE                : 
FLOAT                : 
FLOOR                : 
FLOTANTE             : 16
FOREIGN              : 
FOREING              : 
FROM                 : 
FULL                 : 
GCD                  : 
GET_BYTE             : 
GROUP                : 
HASHTAG              : 
HAVING               : 
HOUR                 : 
ID                   : 6 7 8 9 10 17 18 18 31 34
IGUAL                : 28 34
IN                   : 
INHERITS             : 
INNER                : 
INSERT               : 6 7 8
INTEGER              : 
INTERSECT            : 
INTERVAL             : 
INTO                 : 6 7 8
IS                   : 
ISNULL               : 
JOIN                 : 
KEY                  : 
LCM                  : 
LEFT                 : 
LENGTH               : 
LIKE                 : 
LIMIT                : 
LN                   : 
LOG                  : 
LOG10                : 
MAX                  : 
MAYIGQUE             : 25
MAYMAY               : 
MAYQUE               : 23
MD5                  : 
MENIGQUE             : 26
MENMEN               : 
MENQUE               : 24
MIN                  : 
MINUTE               : 
MIN_SCALE            : 
MOD                  : 
MODULO               : 
MONEY                : 
MONTH                : 
MULTI                : 
NATURAL              : 
NOIG                 : 29
NOIGUAL              : 30
NOT                  : 
NOTNULL              : 
NOW                  : 
NULL                 : 
NUMERIC              : 
OFFSET               : 
ON                   : 
ONLY                 : 
OR                   : 
ORDER                : 
OUTER                : 
OWNER                : 
PAR_A                : 6 6 7 7 8 13
PAR_C                : 6 6 7 7 8 13
PI                   : 
POWER                : 
PRECISION            : 
PRIMARY              : 
PTCOMA               : 6 7 8 31
PUNTO                : 18
RADIANS              : 
RANDOM               : 
REAL                 : 
REFERENCES           : 
RENAME               : 
RESTA                : 20
RETURNING            : 
RIGHT                : 
ROUND                : 
SCALE                : 
SECOND               : 
SELECT               : 
SESSION_USER         : 
SET                  : 31
SETSEED              : 
SET_BYTE             : 
SHA256               : 
SIGN                 : 
SIN                  : 
SIND                 : 
SINH                 : 
SMALLINT             : 
SOME                 : 
SQRT                 : 
SUBSTR               : 
SUBSTRING            : 
SUM                  : 
SUMA                 : 19
SYMMETRIC            : 
S_OR                 : 
TABLE                : 
TAN                  : 
TAND                 : 
TANH                 : 
TEXT                 : 
THEN                 : 
TIME                 : 
TIMESTAMP            : 
TO                   : 
TRIM                 : 
TRIM_SCALE           : 
TRUC                 : 
TRUE                 : 
TYPE                 : 
UNION                : 
UNIQUE               : 
UNKNOWN              : 
UPDATE               : 31
USE                  : 
USING                : 
VALUES               : 6 7 8
VARCHAR              : 
VARYING              : 
WHEN                 : 
WHERE                : 31
WIDTH_BUCKET         : 
Y                    : 
YEAR                 : 
error                : 

Nonterminals, with rules where they appear

agrupacion_expresion : 
expresion            : 11 12 13 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 34
expresion_relacional : 31
init                 : 0
insert_insrt         : 4
instruccion          : 2 3
instrucciones        : 1 2
lista_datos          : 6 7 8 11
lista_parametros_lista : 6 9
lista_update         : 31 32
parametro_update     : 32 33
update_insrt         : 5

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . insert_insrt
    (5) instruccion -> . update_insrt
    (6) insert_insrt -> . INSERT INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (7) insert_insrt -> . INSERT INTO ID PAR_A PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (8) insert_insrt -> . INSERT INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA
    (31) update_insrt -> . UPDATE ID SET lista_update WHERE expresion_relacional PTCOMA

    INSERT          shift and go to state 6
    UPDATE          shift and go to state 7

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    insert_insrt                   shift and go to state 4
    update_insrt                   shift and go to state 5

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . insert_insrt
    (5) instruccion -> . update_insrt
    (6) insert_insrt -> . INSERT INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (7) insert_insrt -> . INSERT INTO ID PAR_A PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (8) insert_insrt -> . INSERT INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA
    (31) update_insrt -> . UPDATE ID SET lista_update WHERE expresion_relacional PTCOMA

    $end            reduce using rule 1 (init -> instrucciones .)
    INSERT          shift and go to state 6
    UPDATE          shift and go to state 7

    instruccion                    shift and go to state 8
    insert_insrt                   shift and go to state 4
    update_insrt                   shift and go to state 5

state 3

    (3) instrucciones -> instruccion .

    INSERT          reduce using rule 3 (instrucciones -> instruccion .)
    UPDATE          reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> insert_insrt .

    INSERT          reduce using rule 4 (instruccion -> insert_insrt .)
    UPDATE          reduce using rule 4 (instruccion -> insert_insrt .)
    $end            reduce using rule 4 (instruccion -> insert_insrt .)


state 5

    (5) instruccion -> update_insrt .

    INSERT          reduce using rule 5 (instruccion -> update_insrt .)
    UPDATE          reduce using rule 5 (instruccion -> update_insrt .)
    $end            reduce using rule 5 (instruccion -> update_insrt .)


state 6

    (6) insert_insrt -> INSERT . INTO ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (7) insert_insrt -> INSERT . INTO ID PAR_A PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (8) insert_insrt -> INSERT . INTO ID VALUES PAR_A lista_datos PAR_C PTCOMA

    INTO            shift and go to state 9


state 7

    (31) update_insrt -> UPDATE . ID SET lista_update WHERE expresion_relacional PTCOMA

    ID              shift and go to state 10


state 8

    (2) instrucciones -> instrucciones instruccion .

    INSERT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    UPDATE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 9

    (6) insert_insrt -> INSERT INTO . ID PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (7) insert_insrt -> INSERT INTO . ID PAR_A PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (8) insert_insrt -> INSERT INTO . ID VALUES PAR_A lista_datos PAR_C PTCOMA

    ID              shift and go to state 11


state 10

    (31) update_insrt -> UPDATE ID . SET lista_update WHERE expresion_relacional PTCOMA

    SET             shift and go to state 12


state 11

    (6) insert_insrt -> INSERT INTO ID . PAR_A lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (7) insert_insrt -> INSERT INTO ID . PAR_A PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (8) insert_insrt -> INSERT INTO ID . VALUES PAR_A lista_datos PAR_C PTCOMA

    PAR_A           shift and go to state 13
    VALUES          shift and go to state 14


state 12

    (31) update_insrt -> UPDATE ID SET . lista_update WHERE expresion_relacional PTCOMA
    (32) lista_update -> . lista_update COMA parametro_update
    (33) lista_update -> . parametro_update
    (34) parametro_update -> . ID IGUAL expresion

    ID              shift and go to state 15

    lista_update                   shift and go to state 16
    parametro_update               shift and go to state 17

state 13

    (6) insert_insrt -> INSERT INTO ID PAR_A . lista_parametros_lista PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (7) insert_insrt -> INSERT INTO ID PAR_A . PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (9) lista_parametros_lista -> . lista_parametros_lista COMA ID
    (10) lista_parametros_lista -> . ID

    PAR_C           shift and go to state 20
    ID              shift and go to state 18

    lista_parametros_lista         shift and go to state 19

state 14

    (8) insert_insrt -> INSERT INTO ID VALUES . PAR_A lista_datos PAR_C PTCOMA

    PAR_A           shift and go to state 21


state 15

    (34) parametro_update -> ID . IGUAL expresion

    IGUAL           shift and go to state 22


state 16

    (31) update_insrt -> UPDATE ID SET lista_update . WHERE expresion_relacional PTCOMA
    (32) lista_update -> lista_update . COMA parametro_update

    WHERE           shift and go to state 23
    COMA            shift and go to state 24


state 17

    (33) lista_update -> parametro_update .

    WHERE           reduce using rule 33 (lista_update -> parametro_update .)
    COMA            reduce using rule 33 (lista_update -> parametro_update .)


state 18

    (10) lista_parametros_lista -> ID .

    PAR_C           reduce using rule 10 (lista_parametros_lista -> ID .)
    COMA            reduce using rule 10 (lista_parametros_lista -> ID .)


state 19

    (6) insert_insrt -> INSERT INTO ID PAR_A lista_parametros_lista . PAR_C VALUES PAR_A lista_datos PAR_C PTCOMA
    (9) lista_parametros_lista -> lista_parametros_lista . COMA ID

    PAR_C           shift and go to state 25
    COMA            shift and go to state 26


state 20

    (7) insert_insrt -> INSERT INTO ID PAR_A PAR_C . VALUES PAR_A lista_datos PAR_C PTCOMA

    VALUES          shift and go to state 27


state 21

    (8) insert_insrt -> INSERT INTO ID VALUES PAR_A . lista_datos PAR_C PTCOMA
    (11) lista_datos -> . lista_datos COMA expresion
    (12) lista_datos -> . expresion
    (14) expresion -> . CADENA
    (15) expresion -> . ENTERO
    (16) expresion -> . FLOTANTE
    (17) expresion -> . ID
    (18) expresion -> . ID PUNTO ID
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . expresion ASTERISCO expresion

    CADENA          shift and go to state 31
    ENTERO          shift and go to state 32
    FLOTANTE        shift and go to state 33
    ID              shift and go to state 28

    lista_datos                    shift and go to state 29
    expresion                      shift and go to state 30

state 22

    (34) parametro_update -> ID IGUAL . expresion
    (14) expresion -> . CADENA
    (15) expresion -> . ENTERO
    (16) expresion -> . FLOTANTE
    (17) expresion -> . ID
    (18) expresion -> . ID PUNTO ID
    (19) expresion -> . expresion SUMA expresion
    (20) expresion -> . expresion RESTA expresion
    (21) expresion -> . expresion DIVISION expresion
    (22) expresion -> . expresion ASTERISCO expresion
